--- a/action.yml
+++ b/action.yml
@@ -2,7 +2,7 @@
 name: 'Github Pages Directory Listing'
 description: 'Github Action to generate directory listing index for Github Pages'
 
-author: 'JonathanWinters'
+author: 'jayanta525'
 branding:
   color: 'green'
   icon: 'upload-cloud'
